@@ -402,9 +402,13 @@ $_prefs['filter'] = array(
     //     // Bulk filter, enabled by default
     //     new IMP_Search_Filter_Bulk(array(
     //         'disable' => false
+    //     )),
+    //     // Mailing list filter, enabled by default
+    //     new IMP_Search_Filter_Mailinglist(array(
+    //         'disable' => false
     //     ))
     // ))
-    'value' => 'a:1:{i:0;C:22:"IMP_Search_Filter_Bulk":88:{a:3:{s:1:"c";a:1:{i:0;C:23:"IMP_Search_Element_Bulk":5:{[1,0]}}s:1:"e";i:1;s:1:"v";i:1;}}}'
+    'value' => 'a:2:{i:0;C:22:"IMP_Search_Filter_Bulk":88:{a:3:{s:1:"c";a:1:{i:0;C:23:"IMP_Search_Element_Bulk":5:{[1,0]}}s:1:"e";i:1;s:1:"v";i:1;}}i:1;C:29:"IMP_Search_Filter_Mailinglist":95:{a:3:{s:1:"c";a:1:{i:0;C:30:"IMP_Search_Element_Mailinglist":5:{[1,0]}}s:1:"e";i:1;s:1:"v";i:1;}}}'
 );
 
 
